# spyward

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  dub.json  wrapper.h
config/: config.ini
docs/: easylist-syntax.md  limitations.md
lists/: test_list.txt
source/: app.d  ini.d  ip.d  nfnetlink_queue.d
src/: cli.rs  domain_trie.rs  easylist.rs  errors.rs  filter_engine.rs  ip.rs  main.rs  nfqueue.rs  nftables.rs  packet_inspection.rs  sni.rs  tcp.rs
src/packet/: dispatcher.rs  handler.rs  inspection.rs  mod.rs
src/protocol/: header.rs  http.rs  icmp.rs  mod.rs  tcp.rs  udp.rs
src/protocol/icmp/: handler.rs  parser.rs
src/protocol/reassembly/: buffer.rs  manager.rs
src/protocol/tcp/: handler.rs  parser.rs
src/protocol/udp/: handler.rs  parser.rs
