[package]
name = "spyward"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = "3.4.7"
dashmap = "6.1.0"
libc = "0.2.172"
nom = "8.0.0"
once_cell = "1.21.3"
regex = "1.11.1"
thiserror = "2.0.12"
tls-parser = "0.12.2"
url = "2.5.4"

[build-dependencies]
bindgen = "0.71.1"
pkg-config = "0.3.32"
